Fixed Header Image compressed Issue on Mobile

--- a/src/components/Introduction/Intro.css
+++ b/src/components/Introduction/Intro.css
@@ -152,34 +152,12 @@
       color: rgba(255, 255, 255, 0.4);
       z-index: 1;
   }
-  #image1{
+  .animate {
     min-width: 100%;
     object-fit:cover;
     margin-right: auto;
-}
   }
-/* @media screen and (max-width: 560px) {
-    .intro__text span{
-
-        font-size: 30px;
-    }
-    .intro__text{
-        
-        font-size: 30px;
-    }
-    /* .intro__container img:nth-child(1){
-        display: none;
-    } 
-  } 
-
-/* @keyframes rotation {
-  from {
-    transform: rotate(0deg);
   }
-  to {
-    transform: rotate(359deg);
-  }
-} */
 @keyframes fade {
   0%,100% { opacity: 0 }
   45% { opacity: 1 }
